--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Registro</title>
 </head>
-<body>
 
+
+
+<body>
+	<script src="app.js"></script>
 </body>
 
 </html>
